--- a/backend/src/main/resources/web/index.html
+++ b/backend/src/main/resources/web/index.html
@@ -1,36 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>MyChats</title>
-	<meta charset="utf-8">
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<title>Chat app</title>
+
+<style type="text/css">
+	/*custom font*/
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+/*basic reset*/
+* {margin: 0; padding: 0;}
+
+html {
+	height: 100%;
+	/*Image only BG fallback*/
+	
+	/*background = gradient + image pattern combo*/
+	background: 
+		linear-gradient(rgba(196, 102, 0, 0.6), rgba(155, 89, 182, 0.6));
+}
+
+body {
+	font-family: montserrat, arial, verdana;
+}
+/*form styles*/
+#msform {
+	width: 400px;
+	margin: 50px auto;
+	text-align: center;
+	position: relative;
+}
+#msform fieldset {
+	background: white;
+	border: 0 none;
+	border-radius: 3px;
+	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+	padding: 20px 30px;
+	box-sizing: border-box;
+	width: 80%;
+	margin: 0 10%;
+	
+	/*stacking fieldsets above each other*/
+	position: relative;
+}
+/*Hide all except first fieldset*/
+#msform fieldset:not(:first-of-type) {
+	display: none;
+}
+/*inputs*/
+#msform input, #msform textarea {
+	padding: 15px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	margin-bottom: 10px;
+	width: 100%;
+	box-sizing: border-box;
+	font-family: montserrat;
+	color: #2C3E50;
+	font-size: 13px;
+}
+/*buttons*/
+#msform .action-button {
+	width: 100px;
+	background: #27AE60;
+	font-weight: bold;
+	color: white;
+	border: 0 none;
+	border-radius: 1px;
+	cursor: pointer;
+	padding: 10px 5px;
+	margin: 10px 5px;
+}
+#msform .action-button:hover, #msform .action-button:focus {
+	box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
+}
+/*headings*/
+.fs-title {
+	font-size: 15px;
+	text-transform: uppercase;
+	color: #2C3E50;
+	margin-bottom: 10px;
+}
+.fs-subtitle {
+	font-weight: normal;
+	font-size: 13px;
+	color: #666;
+	margin-bottom: 20px;
+}
+/*progressbar*/
+#progressbar {
+	margin-bottom: 30px;
+	overflow: hidden;
+	/*CSS counters to number the steps*/
+	counter-reset: step;
+}
+#progressbar li {
+	list-style-type: none;
+	color: white;
+	text-transform: uppercase;
+	font-size: 9px;
+	width: 33.33%;
+	float: left;
+	position: relative;
+}
+#progressbar li:before {
+	content: counter(step);
+	counter-increment: step;
+	width: 20px;
+	line-height: 20px;
+	display: block;
+	font-size: 10px;
+	color: #333;
+	background: white;
+	border-radius: 3px;
+	margin: 0 auto 5px auto;
+}
+/*progressbar connectors*/
+#progressbar li:after {
+	content: '';
+	width: 100%;
+	height: 2px;
+	background: white;
+	position: absolute;
+	left: -50%;
+	top: 9px;
+	z-index: -1; /*put it behind the numbers*/
+}
+#progressbar li:first-child:after {
+	/*connector not needed before the first step*/
+	content: none; 
+}
+/*marking active/completed steps green*/
+/*The number of the step and the connector before it = green*/
+#progressbar li.active:before,  #progressbar li.active:after{
+	background: #27AE60;
+	color: white;
+}
+
+
+
+</style>
+
 </head>
 <body>
-<header>
-		<div style="background-color:#e5e5e5;padding:10px;text-align:left;">
-  		    <h3>My Chats</h3>
-		</div>	
-	</header>
-<div style="background-color:#e5e5e5;text-align:center;padding:10px;margin-top:7px;">
-<form action="#">
-    <label for="name">Name: </label><input class="w3-input w3-animate-input" id="name" type="text" style="width:135px" />
-    <input id="join" type="button" value="Join!"/>
+<!-- multistep form -->
+<form id="msform" action="#">
+  
+  <!-- fieldsets -->
+  <fieldset>
+    <h2 class="fs-title">Start chatting!</h2>
+    
+    <input id="name" type="text" name="Name" placeholder="Name" />
+    <input id="join" type="button" name="Join" class="next action-button" value="Join" />
+    <input id="message" type="text" name="pass" placeholder="message" />
+    <input id="send" type="button" name="Send" class="next action-button" value="Send" />
+  </fieldset>
 </form>
-
-<form action="#">
-    <label for="message">Message: </label><input class="w3-input w3-animate-input" id="message" type="text" style="width:135px"/>
-    <input  id="send" type="button" value="Send" disabled="true"/>
-</form>
-</div>
 <div id="playground"/>
 
 <script type="text/javascript" src="frontend-fastopt.js"></script>
 <script type="text/javascript" src="frontend-launcher.js"></script>
-
-<footer>
-    		<div style="background-color:#e5e5e5;text-align:center;padding:10px;margin-top:7px;"><p >Copyright © mevinod <a href="http://mevinod.com">mevinod.com</a></p></div>		
-</footer>
 
 </body>
 </html>
